--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 <body ng-controller="MainController">
     <header id="header" ng-include="'Views/Partials/Navbar.html'"></header>
     <main class="container no-whitespace" ng-view></main>
+
     <!-- 3rd party libs and extensions -->
     <script src="Scripts/jquery-3.1.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-route.js"></script>
+
     <!-- Modules -->
     <script src="Scripts/Modules/module.js"></script>
+
     <!-- Routes -->
     <script src="Scripts/Routes/route.js"></script>
+
+    <!-- Services -->
+    <script src="Scripts/Services/sensors-api.service.js"></script>
+
     <!-- Controllers -->
     <script src="Scripts/Controllers/main.controller.js"></script>
     <script src="Scripts/Controllers/home.controller.js"></script>
