--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <script src="Scripts/Controllers/main.controller.js"></script>
     <script src="Scripts/Controllers/home.controller.js"></script>
     <script src="Scripts/Controllers/sensors.controller.js"></script>
+    <script src="Scripts/Controllers/temperatures.controller.js"></script>
 </body>
 </html>
