--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
     <script src="Scripts/angular-route.js"></script>
     <!-- Modules -->
     <script src="Scripts/Modules/module.js"></script>
+    <!-- Services -->
+    <script src="Scripts/Services/smarthome-api.controller.js"></script>
     <!-- Routes -->
     <script src="Scripts/Routes/route.js"></script>
     <!-- Controllers -->
     <script src="Scripts/Controllers/main.controller.js"></script>
     <script src="Scripts/Controllers/home.controller.js"></script>
-    <script src="Scripts/Controllers/sensors.controller.js"></script>
+    <script src="Scripts/Controllers/lights.controller.js"></script>
+    <script src="Scripts/Controllers/alarm.controller.js"></script>
+    <script src="Scripts/Controllers/weather.controller.js"></script>
 </body>
 </html>
