--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8" />
     <link href="CSS/master.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
 </head>
 <body ng-controller="MainController">
     <header id="header" ng-include="'Views/Partials/Navbar.html'"></header>
@@ -14,8 +15,10 @@
     <!-- 3rd party libs and extensions -->
     <script src="Scripts/jquery-3.1.1.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
+    <script src="Scripts/jquery.signalR-2.2.1.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-route.js"></script>
+    <script src="Scripts/angular-signalr-hub.js"></script>
 
     <!-- Modules -->
     <script src="Scripts/Modules/module.js"></script>
