--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     
 </head>
 <body ng-controller="MainController">
+    <div id="page-header" style="text-align:center; font-family:'Comic Sans MS'">
+        <h1><b><i>Smart Home - Application</i></b></h1>
+    </div>
+
     <header id="header" ng-include="'Views/Partials/Navbar.html'"></header>
     <main class="container no-whitespace" ng-view></main>
 
